<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.target>1.7</maven.compiler.target>
    <maven.compiler.source>1.7</maven.compiler.source>
  </properties>
  <groupId>org.cloudi.examples.tutorial</groupId>
  <artifactId>cloudi_tutorial_java</artifactId>
  <packaging>jar</packaging>
  <version>2.0.7</version>
  <name>cloudi_tutorial_java</name>
  <url>https://www.cloudi.org</url>
  <licenses>
    <license>
      <name>MIT License</name>
      <url>https://www.opensource.org/licenses/mit-license.php</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <developers>
    <developer>
      <name>Bruce Kissinger</name>
    </developer>
    <developer>
      <name>Michael Truog</name>
    </developer>
  </developers>
  <scm>
    <connection>scm:git:git@github.com:CloudI/cloudi_tutorial_java.git</connection>
    <developerConnection>scm:git:git@github.com:CloudI/cloudi_tutorial_java.git</developerConnection>
    <url>git@github.com:CloudI/cloudi_tutorial_java.git</url>
  </scm>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <!-- turn on javac Xlint warnings
          <compilerArgs>
            <arg>-verbose</arg>
            <arg>-Xlint:all,-options,-path</arg>
          </compilerArgs>
            -->
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <configuration>
          <outputDirectory>
            ${project.build.directory}
          </outputDirectory>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>2.6</version>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>org.cloudi.examples.tutorial.Main</mainClass>
            </manifest>
            <manifestEntries>
              <Add-Opens>java.base/java.io</Add-Opens>
            </manifestEntries>
          </archive>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id> <!-- this is used for inheritance merges -->
            <phase>package</phase> <!-- bind to the packaging phase -->
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <!-- For testing unreleased Java CloudI API changes,
       use a local installation of the cloudi_api_java dependency:
       
       mvn org.apache.maven.plugins:maven-install-plugin:2.5.2:install-file -Dfile=/home/george/organized/work/financial_helper_apps/mc2_all-patterns/intraday_system/cloudi_org/cloudi_api_java/target/cloudi_api_java-2.0.4-jdk17.jar -DgroupId=org.cloudi -DartifactId=cloudi_api_java -Dversion=2.0.4 -Dpackaging=jar -DlocalRepositoryPath=lib

  <repositories>
    <repository>
      <id>local-dependencies</id>
      <url>file://${basedir}/lib</url>
    </repository>
  </repositories>
    -->
  <dependencies>
    <dependency>
      <groupId>org.cloudi</groupId>
      <artifactId>cloudi_api_java</artifactId>
      <version>2.0.7</version>
      <classifier>jdk17</classifier>
    </dependency>
    <dependency>
      <groupId>org.apache.mahout</groupId>
      <artifactId>mahout-mr</artifactId>
      <version>0.13.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.mahout</groupId>
      <artifactId>mahout-integration</artifactId>
      <version>0.13.0</version>
    </dependency>
    <dependency>
      <groupId>commons-dbcp</groupId>
      <artifactId>commons-dbcp</artifactId>
      <version>1.4</version>
    </dependency>
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>9.4.1212.jre7</version>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.8.9</version>
    </dependency>
    <dependency>
      <groupId>com.beust</groupId>
      <artifactId>jcommander</artifactId>
      <version>1.78</version>
    </dependency>
  </dependencies>
</project>
